<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comr.example.administrator.hostfamily.Rxjava">
    <Button
        android:id="@+id/creat_observable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creat_observable"/>
    <Button
        android:id="@+id/observable_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observable_from"/>
    <Button
        android:id="@+id/obs_just"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ob_just"/>
    <Button
        android:id="@+id/publish_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_subject"/>
    <Button
        android:id="@+id/zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip"/>



</LinearLayout>
