<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comr.example.administrator.hostfamily.main_tab.Home_page">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/text"/>
    <Button
        android:id="@+id/rxjava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rxjava"/>
    <Button
        android:id="@+id/small_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smallDemo"/>

</LinearLayout>
